--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Epic Universe Parkwide Systems Team</title>
-      <link rel="icon" href="/public/favicon.ico">
+      <link rel="icon" href="public/favicon.ico">
       <link rel="stylesheet" href="styles.css">
    </head>
    <body>
       <div class="bright-stars"></div>
       <div class="container">
          <div class="logo-container">
-            <img id="team-logo" src="/public/PWS_logo.svg " alt="Parkwide Systems Team Logo">
+            <img id="team-logo" src="public/PWS_logo.svg " alt="Parkwide Systems Team Logo">
          </div>
          <h1>Universal Creative's Parkwide Systems Team</h1>
          <h2 id="epic-title">@ Epic Universe</h2>
