add webpage credits & title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Epic Universe Parkwide Systems Team</title>
+      <title>UC P965 Team Credits</title>
       <link rel="icon" href="public/favicon.ico">
       <link rel="stylesheet" href="styles.css">
    </head>
@@ -167,6 +167,7 @@
          <footer>
             <p>Epic Parkwide Systems</p>
             <p>2018 - 2025</p>
+            <p>Made with ❤️ by Tori Decker and Sam Stanton</p>
          </footer>
       </div>
       <script>
