Change last sentence to strong and rename epic element

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <img id="team-logo" src="public/PWS_logo.svg " alt="Parkwide Systems Team Logo">
          </div>
          <h1>Universal Creative's Parkwide Systems Team</h1>
-         <h2 id="epic-title">@ Epic Universe</h2>
+         <h2 id="epic-theme">@ Epic Universe</h2>
          <div class="intro-text">
             <p>Hello! Please meet Universal Creative's Parkwide Systems team for Epic Universe! Listed, you will find the names of all the folks who worked for the Parkwide Systems team to build the IT infrastructure of the gorgeous park you are now exploring.</p>
             <p>We represent the hidden heartbeat of the park, as we worked to bring everything together for the different lands. From the music you hear, to the lights illuminating the walkways, to the internet connection on your phone that's letting you see this message, we helped bring this incredible park to life.</p>
-            <p>We connected the pieces of the puzzle that the individual lands created, making sure all the necessary networks were working and talking to one another. We worked tirelessly on this project to make it as fantastic as possible for you, our marvelous guests, in the hope that you would enjoy each and every aspect of this extraordinary park you see before you.</p>
-            <p>From the bottom of our hearts, we thank you for joining us on this EPIC journey!</p>
+            <p>With the help of amazing vendors, engineers, and administrators, we connected the pieces of the puzzle that the individual lands created, making sure all the necessary networks were working and talking to one another. We worked tirelessly on this project to make it as fantastic as possible for you, our marvelous guests, in the hope that you would enjoy each and every aspect of this extraordinary park you see before you.</p>
+            <strong>From the bottom of our hearts, we thank you for joining us on this <strong id="epic-theme">EPIC journey!</strong> </strong>
          </div>
          <div class="team-section">
             <h3>Past and Present Parkwide Systems Team</h3>
