add Chris DeLuigi

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                   <li>Adam Wallace</li>
                   <li>Alessandro Messina</li>
                   <li>Amanda Czop</li>
+                  <li>Anaitza Arbelo Torres</li>
                   <li>Anderson De Carvalho</li>
                   <li>Andrew Kastenbaum</li>
-                  <li>Anaitza Arbelo Torres</li>
                   <li>Anil John</li>
                   <li>Anthony Christini</li>
                   <li>Ayham Hmemes</li>
@@ -44,8 +44,8 @@
                   <li>Bran Cowart</li>
                   <li>Branden Wheeler</li>
                   <li>Braun Zimmermann</li>
-                  <li>Brian Hodge</li>
                   <li>Brenda Elliott</li>
+                  <li>Brian Hodge</li>
                   <li>Caleb Joseph</li>
                   <li>Carl Langford, Jr.</li>
                   <li>Carmen Rosa</li>
@@ -53,6 +53,7 @@
                   <li>Catherine Law</li>
                   <li>Charles Norton</li>
                   <li>Chelsea Holbrook</li>
+                  <li>Chris DeLuigi</li>
                   <li>Chris Marusiak</li>
                   <li>Chris Norris</li>
                   <li>Colby Redman</li>
