add Clayton Cannon

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                   <li>Chris DeLuigi</li>
                   <li>Chris Marusiak</li>
                   <li>Chris Norris</li>
+                  <li>Clayton Cannon</li>
                   <li>Colby Redman</li>
                   <li>Dan Miller</li>
                   <li>Dane Carter</li>
