add Marwan Rashid

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                   <li>Luis Gomez</li>
                   <li>Manar Elsakka</li>
                   <li>Manny Baez</li>
+                  <li>Marwan Rashid</li>
                   <li>Matt Anderson</li>
                   <li>Matt Minson</li>
                   <li>Melissa Burchett</li>
