--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                   <li>Chris Norris</li>
                   <li>Clayton Cannon</li>
                   <li>Colby Redman</li>
+                  <li>Dan Hunter</li>
                   <li>Dan Miller</li>
                   <li>Dane Carter</li>
                   <li>Darren White</li>
