--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
             <p>We represent the hidden heartbeat of the park, as we worked to bring everything together for the different lands. From the music you hear, to the lights illuminating the walkways, to the internet connection on your phone that's letting you see this message, we helped bring this incredible park to life.</p>
             <p>With the help of amazing vendors, engineers, and administrators, we connected the pieces of the puzzle that the individual lands created, making sure all the necessary networks were working and talking to one another. We worked tirelessly on this project to make it as fantastic as possible for you, our marvelous guests, in the hope that you would enjoy each and every aspect of this extraordinary park you see before you.</p>
             <strong>From the bottom of our hearts, we thank you for joining us on this <strong id="epic-theme">EPIC journey!</strong> </strong>
+            <strong><strong id="epic-theme">Manar Elsakka!</strong> </strong>
          </div>
          <div class="team-section">
             <h3>Past and Present Parkwide Systems Team</h3>
             <div class="team-list">
                <ul>
+                  <li>Manar Elsakka</li>
                   <li>Aaron Ettinger</li>
                   <li>Abraham Ibbarondo</li>
                   <li>Adam Wallace</li>
@@ -118,7 +120,6 @@
                   <li>Luis A Diaz</li>
                   <li>Luis Alves</li>
                   <li>Luis Gomez</li>
-                  <li>Manar Elsakka</li>
                   <li>Manny Baez</li>
                   <li>Marwan Rashid</li>
                   <li>Matt Anderson</li>
