Add Buddy Pope and William Deng

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                   <li>Bran Cowart</li>
                   <li>Branden Wheeler</li>
                   <li>Brian Hodge</li>
+                  <li>Buddy Pope</li>
                   <li>Caleb Joseph</li>
                   <li>Carmen Rosa</li>
                   <li>Charles Norton</li>
@@ -165,6 +166,7 @@
                   <li>Thieu Trinh</li>
                   <li>Ullern Gordon</li>
                   <li>Vannessa Dejesus</li>
+                  <li>William Dang</li>
                   <li>Yuris Fortis</li>
                   </ul>
             </div>
