Add Jose Rodriguez

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                   <li>Jim Windsor</li>
                   <li>Joe Dimacchia</li>
                   <li>John Jeffers</li>
+                  <li>Jose Rodriguez</li>
                   <li>Juliana Lemos</li>
                   <li>Kenny Cacka</li>
                   <li>Kevin Roach</li>
