--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                   <li>Chris Marusiak</li>
                   <li>Chris Norris</li>
                   <li>Clayton Cannon</li>
+                  <li>Dan Dansby</li>
                   <li>Dan Hunter</li>
                   <li>Dan Miller</li>
                   <li>Dane Carter</li>
