change ollie to dark version

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     
     <!-- Hidden logo that leads to the real page -->
-    <img src="public/sso-media/ollie.png" class="hidden-logo" alt="Hidden Logo" id="secret-entry">
+    <img src="public/sso-media/dark-ollie.png" class="hidden-logo" alt="Hidden Logo" id="secret-entry">
     
     <script>
         document.addEventListener('DOMContentLoaded', function() {
