Update Scott McMillin's name

--- a/pws-memorandum.html
+++ b/pws-memorandum.html
@@ -158,7 +158,7 @@
                   <li>Russ Oliver</li>
                   <li>Ryan Koch</li>
                   <li>Sam Robinson</li>
-                  <li>Scott McMillan</li>
+                  <li>Scott McMillin</li>
                   <li>Shahiyd Alexander</li>
                   <li>Shawn Johnson</li>
                   <li>Steve Del Casale</li>
