--- a/pws-memorandum.html
+++ b/pws-memorandum.html
@@ -139,6 +139,7 @@
                   <li>Manny Baez</li>
                   <li>Marwan Rashid</li>
                   <li>Matt Anderson</li>
+                  <li>Megan Leno</li>
                   <li>Melody Arroyo</li>
                   <li>Nick Boley</li>
                   <li>Nick Schottle</li>
