Add Sabrina Newton

--- a/pws-memorandum.html
+++ b/pws-memorandum.html
@@ -64,6 +64,7 @@
                   <li>Nick Puglisi</li>
                   <li>Robert Mendillo</li>
                   <li>Robert Rodriguez</li>
+                  <li>Sabrina Newton</li>
                   <li>Sam Stanton</li>
                   <li>Scott Hennessy</li>
                   <li>Shawn Hope</li>
