--- a/pws-memorandum.html
+++ b/pws-memorandum.html
@@ -174,6 +174,195 @@
                   </ul>
             </div>
          </div>
+<br>
+<br>
+<div class="team-section">
+<div class="intro-text">
+<h3>In Recognition of the Original Ride & Show Team</h3>            
+			<p>The individuals listed below were among the first to bring Epic Universe to life. Before the project was paused due to the global pandemic, this team poured their creativity, expertise, and heart into building not just the foundation—but the very framework of what this 			park would become.</p>
+            <p>Many of the groundbreaking ideas and unforgettable experiences found in <i>Epic Universe</i> today began with their work.</p>
+            <p>This recognition honors their contributions, their belief in the project, and the lasting legacy they helped create.</p>
+         </div>
+            <div class="team-list">
+               <ul>
+                 <li>Justin Schwartz - Executive Team</li>
+				<li>Jerry Loudon - Executive Team</li>
+				<li>Charlie Gundacker - Executive Team</li>
+				<li>Gary Stebler - Executive Team</li>
+				<li>Elizabeth Gilbertson - Executive Team</li>
+				<li>Jerry Loudon - Executive Team</li>
+				<li>Sara Gibbons - Executive Team</li>
+				<li>Simon Hiracheta - Executive Team</li>
+				<li>Susie Scott - Executive Team</li>
+				<li>Bill Finn - Land Director</li>
+				<li>Brent Beardslee - Land Director</li>
+				<li>Eric Piner - Land Director</li>
+				<li>Jim Bannon - Land Director</li>
+				<li>Scott Stewart - Land Director</li>
+				<li>Steve Herrmann - Land Director</li>
+				<li>Jeff Polk - Exec Opertations Partner</li>
+				<li>Brandon Bauman - Exec Opertations Partner</li>
+				<li>Kevin Bodshaug - Exec Opertations Partner</li>
+				<li>Shawn Kish - Exec Opertations Partner</li>
+				<li>Vinny Trazzera - Exec Opertations Partner</li>
+				<li>Adrian Arce</li>
+				<li>Alberto Pena</li>
+				<li>Alberto Perez</li>
+				<li>Alec Dvornik</li>
+				<li>Alex Fillalan</li>
+				<li>Alex Nelson</li>
+				<li>Alex Smith</li>
+				<li>Amanda Czop</li>
+				<li>Andrew Dolson</li>
+				<li>Andrew Raij</li>
+				<li>Anisha Vyas</li>
+				<li>Anne Marie Connor</li>
+				<li>Annina Kreiser</li>
+				<li>Anthony Luccessi</li>
+				<li>Ari Novick</li>
+				<li>Barry Grogan</li>
+				<li>Bill Rodriguez</li>
+				<li>Bradford Benn</li>
+				<li>Bradley Cronenwett</li>
+				<li>Brayan Delgado</li>
+				<li>Brent Bauman</li>
+				<li>Bryan Zebleckes</li>
+				<li>Carol Biagetti</li>
+				<li>Catalina Azocar</li>
+				<li>Chandler Schramm</li>
+				<li>Chris Herbert</li>
+				<li>Chris Marzella</li>
+				<li>Christine Sorrentino</li>
+				<li>Clarisse Vamos</li>
+				<li>Cliff Sapaugh</li>
+				<li>Cristina Lipsett Maldondo</li>
+				<li>Cyndi Olszewski</li>
+				<li>Cynthia Gosiewski</li>
+				<li>Dan Dansby</li>
+				<li>Dan Harris</li>
+				<li>Dan Swando</li>
+				<li>Daren Fluty</li>
+				<li>Dave Helmick</li>
+				<li>David Alter</li>
+				<li>David Churchill</li>
+				<li>David Komives</li>
+				<li>David Swerzenski</li>
+				<li>Delaney Charney</li>
+				<li>Dennis Cole Jr.</li>
+				<li>Dennis Gebken</li>
+				<li>Edwin Benitez</li>
+				<li>Elizabeth Sutphin</li>
+				<li>Elliot Taylor</li>
+				<li>Eric Kaminsky</li>
+				<li>Erick Wong</li>
+				<li>Erika King</li>
+				<li>Esha Shanbhogue</li>
+				<li>Fred "Cal" Wainwright</li>
+				<li>Georgia Martin</li>
+				<li>Geovanny Treminio</li>
+				<li>Giacomo Savardi</li>
+				<li>Grace Haynes</li>
+				<li>Grace Perfect</li>
+				<li>Greg Chatlos</li>
+				<li>Greg Self</li>
+				<li>Haley Amason</li>
+				<li>Harrison Smith</li>
+				<li>Heatherlyn Egan</li>
+				<li>James Bertoncello</li>
+				<li>James Nelson</li>
+				<li>Janene Pettus</li>
+				<li>Jason Decker</li>
+				<li>Jason Marylander</li>
+				<li>Jeff Allen</li>
+				<li>Jeff Bardt</li>
+				<li>Jeff Kelso</li>
+				<li>Jenny Curovic</li>
+				<li>Jeremiah Wood</li>
+				<li>Jeremy Campbell</li>
+				<li>Jerry Dwyer</li>
+				<li>Jerry Stoltenberg</li>
+				<li>Jesse Bartlett</li>
+				<li>Jessica Webb</li>
+				<li>Jim Roberts</li>
+				<li>Jimmy Dagley</li>
+				<li>Joanna Prince</li>
+				<li>John "David" Smith</li>
+				<li>John Bakken</li>
+				<li>John Cashman</li>
+				<li>John O'Gara</li>
+				<li>John Ugrin</li>
+				<li>Jonathan Frank</li>
+				<li>Jonathan Zencheck</li>
+				<li>Jordan Grozinger</li>
+				<li>Jordan Masker</li>
+				<li>Julion Bell</li>
+				<li>Justin Hare</li>
+				<li>Kara Wakefield</li>
+				<li>Kate Novak</li>
+				<li>Kati Rose Christensen</li>
+				<li>Kelly Lemos</li>
+				<li>Ken Foley</li>
+				<li>Ken Walker</li>
+				<li>Kevin Kellenberger</li>
+				<li>Krey Tinker</li>
+				<li>Kyle Youmans</li>
+				<li>Lana Light</li>
+				<li>Lisa Levy</li>
+				<li>Liz Colon</li>
+				<li>Luis Carlos Alarcon</li>
+				<li>Mac Phelps</li>
+				<li>Manar Elsakka</li>
+				<li>Marcelo Shah</li>
+				<li>Marco Ramirez</li>
+				<li>Marcus Taylor</li>
+				<li>Maria Palermo</li>
+				<li>Matt Gall</li>
+				<li>Matt Lenz</li>
+				<li>Matt Rudman</li>
+				<li>Matthew Rossett</li>
+				<li>Megan Mueller</li>
+				<li>Melissa Hershberger</li>
+				<li>Michael Beavers</li>
+				<li>Michael Gebhardt</li>
+				<li>Michael Moats</li>
+				<li>Michael Powers</li>
+				<li>Michael Russell</li>
+				<li>Miguel Brito</li>
+				<li>Myles McClellan</li>
+				<li>Nathan Mikulski</li>
+				<li>Nicole Vitello</li>
+				<li>Noel Noble</li>
+				<li>Patricia Karrh</li>
+				<li>Patti Mondana</li>
+				<li>Peter Usher</li>
+				<li>Quiuntae Bristol</li>
+				<li>Rachel Migliacci</li>
+				<li>Rachel Wilcox</li>
+				<li>Richard Amiss</li>
+				<li>Rick Dias</li>
+				<li>Robbie Towns</li>
+				<li>Robert Dannenfelser</li>
+				<li>Robin Ringer</li>
+				<li>Rohan Garricks</li>
+				<li>Roy Reyes</li>
+				<li>Rusty Gates</li>
+				<li>Ryan Paul</li>
+				<li>Said Mourfik</li>
+				<li>Sarah Wu</li>
+				<li>Saul Mudd</li>
+				<li>Scott Hennessy</li>
+				<li>Sharon Stephens</li>
+				<li>Steve King</li>
+				<li>Steve Tatham</li>
+				<li>Taylor Braunworth</li>
+				<li>Tom Williams</li>
+				<li>Victoria Pierce</li>
+				<li>Wendy Paul</li>
+				<li>William Peabody</li>
+				<li>Zack Boyd</li>
+               </ul>
+            </div>
+         </div>
          <footer>
             <p>Epic Parkwide Systems</p>
             <p>2018 - 2025</p>
