--- a/pws-memorandum.html
+++ b/pws-memorandum.html
@@ -204,7 +204,7 @@
 				<li>Brandon Bauman - Exec Opertations Partner</li>
 				<li>Kevin Bodshaug - Exec Opertations Partner</li>
 				<li>Shawn Kish - Exec Opertations Partner</li>
-				<li>Vinny Trazzera - Exec Opertations Partner</li>
+				<li>Vinnie Trazzera - Exec Opertations Partner</li>
 				<li>Adrian Arce</li>
 				<li>Alberto Pena</li>
 				<li>Alberto Perez</li>
@@ -218,7 +218,7 @@
 				<li>Anisha Vyas</li>
 				<li>Anne Marie Connor</li>
 				<li>Annina Kreiser</li>
-				<li>Anthony Luccessi</li>
+				<li>Anthony Lucchesi</li>
 				<li>Ari Novick</li>
 				<li>Barry Grogan</li>
 				<li>Bill Rodriguez</li>
